# hph-vision

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation-report.yml  feature-request.yml
.github/workflows/: docs.yaml  main.yaml  release.yaml
conda/: dev.yaml
docs/plans/: general-plan.md  mobile-app.md  mobile-lib.md  restapi-core.md  restapi.md
