[project]
name = "hph-vision"
version = "0.1.0"  # semantic-release
description = "HPH Vision monorepo Python development environment."
authors = [{name = "Hiper Health"}]
requires-python = ">=3.11,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
hph-vision-api = {path = "packages/restapi", develop = true}
hph-vision-core = {path = "packages/api-core", develop = true}

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.7,<4.0"
pytest = ">=8.2,<9.0"
ruff = ">=0.6,<1.0"
mypy = ">=1.11,<2.0"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["packages/api-core/src", "packages/restapi/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["packages/api-core/src", "packages/restapi/src"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
